Added version to the webpage.

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -27,6 +27,7 @@
             <canvas id="chart_{{loop.index}}"></canvas>
         </div>
     {% endfor %}
+    <p style="text-align: center;">Version: {{ version }}</p>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
