--- a/app/templates/macros.jinja2
+++ b/app/templates/macros.jinja2
@@ -1,3 +1,38 @@
+{% macro price_change_table(data) %}
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-body p-0">
+                <table class="table table-sm">
+                    <thead>
+                        <tr>
+                            <th>Product</th>
+                            <th>Store</th>
+                            <th>Date</th>
+                            <th>Price</th>
+                            <th>Price changed</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for row in data %}
+                        <tr>
+                            <td>{{ row["group_name"] }}</td>
+                            <td><a href="{{ row["url"] }}" target="_blank">{{ row["store"] }}</a></td>
+                            <td>{{ row["date"] }}</td>
+                            <td>{{ row["price"] }}</td>
+                            <td style='color: {{ row["text_color"] }};''>{{ row["price_changed"] }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div> <!-- /.card-body -->
+        </div>
+    </div>
+    <div class="col-md-3"></div>
+</div>
+{% endmacro %}}
+
 {% macro price_table(data) %}
 <div class="row">
     <div class="col-md-3"></div>
