--- a/app/templates/macros.jinja2
+++ b/app/templates/macros.jinja2
@@ -21,7 +21,7 @@
                             <td><a href="{{ row["url"] }}" target="_blank">{{ row["store"] }}</a></td>
                             <td>{{ row["date"] }}</td>
                             <td>{{ row["price"] }}</td>
-                            <td style='color: {{ row["text_color"] }};''>{{ row["price_changed"] }}</td>
+                            <td style='color: {{ row["text_color"] }};''>{{ row["price_changed"] }} ({{ '%0.1f' | format(row["price_changed_percent"]) }}%)</td>
                         </tr>
                         {% endfor %}
                     </tbody>
@@ -57,7 +57,7 @@
                                 <td><a href="{{ row["url"] }}" target="_blank">{{ row["store"] }}</a></td>
                                 <td>{{ row["date"] }}</td>
                                 <td>{{ row["price"] }}</td>
-                                <td style='color: {{ row["text_color"] }};''>{{ row["price_changed"] }}</td>
+                                <td style='color: {{ row["text_color"] }};''>{{ row["price_changed"] }} ({{ '%0.1f'|format(row["price_changed_percent"]) }}%)</td>
                             </tr>
                             {% endfor %}
                         {% endfor %}
